--- a/notebooks/Rubik_Cube_ppo_AutoCL.ipynb
+++ b/notebooks/Rubik_Cube_ppo_AutoCL.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/BrouthenKamel/Auto-CL/blob/main/notebooks/Rubik_Cube_ppo_AutoCL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/BrouthenKamel/Auto-CL/blob/feature%2Famir%2Fdecay/notebooks/Rubik_Cube_ppo_AutoCL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "R1l4XLxT_uRa"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "ijGTtJujfpio",
         "outputId": "01715eab-6077-44be-f508-c29af32874f6",
@@ -131,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "9OmGuxk1gtZ1"
       },
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "CeLS0t7Ug9wW"
       },
@@ -250,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "CkQ_XWC2gwpa"
       },
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "CSAlDbv6socE"
       },
@@ -306,7 +306,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "diHhlv0CiZdg"
       },
@@ -397,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "KqRhgdDqjnIq"
       },
@@ -501,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "J62IlR_BpFxh"
       },
@@ -552,7 +552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "-M_PZHC8pk81"
       },
@@ -916,7 +916,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "V1KydJKIsHPD"
       },
@@ -939,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "RxeGRnJ_sonE"
       },
@@ -953,7 +953,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "7jb2VScDwZoz"
       },
@@ -983,7 +983,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "wVgdiYDcJeZb"
       },
@@ -1010,7 +1010,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "6NHkEsCWHKgf"
       },
@@ -1040,7 +1040,7 @@
       "metadata": {
         "id": "LLsPToMuTwMN"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1066,7 +1066,7 @@
       "metadata": {
         "id": "Za_BHlgJUEVF"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1081,7 +1081,7 @@
       "metadata": {
         "id": "b9IwcW5RUFQe"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1093,7 +1093,7 @@
       "metadata": {
         "id": "pJqwXm8MUJS8"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1106,7 +1106,7 @@
       "metadata": {
         "id": "jSfysQtbvE--"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1120,7 +1120,7 @@
       "metadata": {
         "id": "7RlcE4FgvXau"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1134,7 +1134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "mJWd2PovMMKn"
       },
@@ -1158,7 +1158,7 @@
         "  def get_iter_level(self,iter, stats):\n",
         "    #remember latest action\n",
         "    action = self._current_action\n",
-        "    reward, obs = self.reward(action = action, stats = stats), self.observation(action = action, stats = stats)\n",
+        "    reward, obs = self.reward(action = action, stats = stats), self.observation(action = action, stats = stats, iter = iter)\n",
         "\n",
         "    #record the action, reward, obs\n",
         "    self.record(action, reward, obs)\n",
@@ -1172,12 +1172,12 @@
         "    return abs(self._task_reward_buffer[str(action)][-1] - stats)\n",
         "\n",
         "\n",
-        "  def observation(self, action: int, stats):\n",
-        "    return stats\n",
+        "  def observation(self, action: int, stats, iter):\n",
+        "    return {\"mean_episod_reward\": stats, \"step\": iter}\n",
         "\n",
         "\n",
         "  def record(self, action: int, reward, obs):\n",
-        "    self._task_reward_buffer[str(action)].append(obs) #obs is the mean reward of student\n",
+        "    self._task_reward_buffer[str(action)].append(obs[\"mean_episod_reward\"]) #obs is the mean reward of student\n",
         "    self._training_record = jnp.append(self._training_record, action) # self._training_record.append([action, reward, obs]) #reward is the teacher reward\n",
         "\n",
         "  def step(self, action):\n",
@@ -1190,7 +1190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "id": "yuzrAWU-S7_i"
       },
@@ -1219,25 +1219,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "H-xaDVWcfzRw"
       },
       "outputs": [],
       "source": [
         "class OnlineTeacher(Teacher):\n",
-        "  def __init__(self, action_space, alpha, epsilon, sampling=False):\n",
+        "  def __init__(self, action_space, alpha, epsilon,decay_handler = EpsilonDecay, sampling=False):\n",
         "    super(OnlineTeacher, self).__init__(action_space)\n",
         "    self._alpha = alpha\n",
         "    self._epsilon = epsilon\n",
         "    self._sampling = sampling\n",
+        "    self._decay_handler = decay_handler\n",
         "    self._return_record = jnp.array([])\n",
+        "    self._epsilon_record = jnp.array([])\n",
+        "    self._alpha_record = jnp.array([])\n",
         "    self._return = jnp.zeros(self._action_space)\n",
         "\n",
         "  def policy_update(self, action, reward, obs):\n",
         "    #updated reward\n",
         "    Q = self._return.at[action -1].get()\n",
         "    Q_new = self._alpha*reward + (1-self._alpha)*Q\n",
+        "    self._epsilon, self._alpha = self._decay_handler.apply_decay(step = obs[\"step\"],self._epsilon, self._alpha)\n",
+        "    #save record\n",
+        "    self._epsilon_record, self._alpha_record = jnp.append(self._epsilon_record, self._epsilon), jnp.append(self._alpha_record, self._alpha)\n",
         "\n",
         "    print(f'[REWARD] {reward:.2f}')\n",
         "    # print(f'Q_new:{Q_new}')\n",
@@ -1267,6 +1273,35 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "##Decay Handler"
+      ],
+      "metadata": {
+        "id": "hwCqZmBFFlp6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class EpsilonDecay:\n",
+        "  def __init(self, total_steps,p_init, p_end):\n",
+        "    self._total_steps = total_steps\n",
+        "    self._p_init = p_init\n",
+        "    self._p_end = p_end\n",
+        "\n",
+        "  def apply_decay(self, step, epsilon, alpha):\n",
+        "    r = max((self._total_steps - step)/self._total_steps, 0)\n",
+        "    epsilon = (self._p_init - self._p_end)*r + self._p_end\n",
+        "    return epsilon, alpha"
+      ],
+      "metadata": {
+        "id": "G1219JcHFsQi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "o0Z4pKCydycQ"
       },
@@ -1282,12 +1317,12 @@
       "metadata": {
         "id": "khLgqSrZwx9j"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "KI00gTsbCG6k"
       },
@@ -1295,7 +1330,9 @@
       "source": [
         "rng_key = jax.random.PRNGKey(10)\n",
         "\n",
-        "teacher = OnlineTeacher(action_space=5, alpha=0.9, epsilon=0.3, sampling=False)\n",
+        "decay = EpsilonDecay(p_init = 0.3, p_end = 0.0, total_steps = 400) #total steps is the numer of train iter\n",
+        "\n",
+        "teacher = OnlineTeacher(action_space=5, alpha=0.9, epsilon=0.3, sampling=False, decay_handler = decay)\n",
         "\n",
         "student_env = StudentEnv(teacher=teacher, action_space=5)\n",
         "\n",
@@ -1306,7 +1343,7 @@
         "  get_iter_level = student_env.get_iter_level, #environment method\n",
         "  get_max_iter_steps = lambda x: x+2 if x<5 else x+3, #nb scrambles +2 for 1..4 and +3 for 5..\n",
         "  cl_gen_freq=10, #check for change in level each 10 iter\n",
-        "  num_iteration=0, # 1500,\n",
+        "  num_iteration=400 #1500,\n",
         "  num_sgd_iteration=8,\n",
         "  learning_rate=0.0001,\n",
         "  policy_clip=0.2,\n",
@@ -1389,7 +1426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "MC98yD_HFodF",
         "outputId": "58a5efda-afa5-4c1a-ed21-dc2ecc6542fb",
@@ -1428,7 +1465,7 @@
       "metadata": {
         "id": "7x9JWN_Hb9eH"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
