corrected OnlineTeacher init params mistake

--- a/notebooks/Rubik_Cube_ppo_AutoCL.ipynb
+++ b/notebooks/Rubik_Cube_ppo_AutoCL.ipynb
@@ -1226,7 +1226,7 @@
       "outputs": [],
       "source": [
         "class OnlineTeacher(Teacher):\n",
-        "  def __init__(self, action_space, alpha, epsilon,decay_handler = EpsilonDecay, sampling=False):\n",
+        "  def __init__(self, action_space, alpha, epsilon,decay_handler, sampling=False):\n",
         "    super(OnlineTeacher, self).__init__(action_space)\n",
         "    self._alpha = alpha\n",
         "    self._epsilon = epsilon\n",
