added start iter to trainer

--- a/notebooks/Rubik_Cube_ppo_AutoCL.ipynb
+++ b/notebooks/Rubik_Cube_ppo_AutoCL.ipynb
@@ -24,10 +24,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "yCMBjFZGf78p",
-        "outputId": "572808cd-c53a-4660-98c5-38ad14ae489d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "572808cd-c53a-4660-98c5-38ad14ae489d"
       },
       "outputs": [
         {
@@ -56,10 +56,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "riFLrKyKgIuq",
-        "outputId": "3fa0445b-1d48-40a2-d53a-2db945abf697",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3fa0445b-1d48-40a2-d53a-2db945abf697"
       },
       "outputs": [
         {
@@ -239,10 +239,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "9OmGuxk1gtZ1",
-        "outputId": "46a8e876-4c46-4ca3-ed53-d3c207aeebf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "46a8e876-4c46-4ca3-ed53-d3c207aeebf3"
       },
       "outputs": [
         {
@@ -670,11 +670,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 1,
       "metadata": {
-        "id": "-M_PZHC8pk81"
+        "id": "-M_PZHC8pk81",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 366
+        },
+        "outputId": "02a1e875-d25b-45da-f910-4878e63a5ad0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-1abc0bcaa876>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mPPOTrainer\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \"\"\"\n\u001b[1;32m      3\u001b[0m     \u001b[0mThe\u001b[0m \u001b[0mPPO\u001b[0m \u001b[0mtrainer\u001b[0m \u001b[0mhandles\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mevaluation\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mupdate\u001b[0m \u001b[0mloop\u001b[0m \u001b[0mof\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mPPO\u001b[0m \u001b[0malgorithm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \"\"\"\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-1-1abc0bcaa876>\u001b[0m in \u001b[0;36mPPOTrainer\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m             \u001b[0mpolicy_class\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m             \u001b[0menv_factory\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mCallable\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m             \u001b[0magent_state_factory\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mCallable\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m             \u001b[0mget_iter_level\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mCallable\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Callable' is not defined"
+          ]
+        }
+      ],
       "source": [
         "class PPOTrainer:\n",
         "    \"\"\"\n",
@@ -704,6 +722,7 @@
         "            strategy: str,\n",
         "            explore=True,\n",
         "            saved_params=None,\n",
+        "            start_iter=0,\n",
         "            deque_length=10,\n",
         "            evaluation_device: str = \"gpu\",\n",
         "            training_device: str = \"gpu\",\n",
@@ -742,6 +761,7 @@
         "\n",
         "        self._checkpoint_freq = checkpoint_freq\n",
         "        self._checkpoint_dir = checkpoint_dir\n",
+        "        self._start_iter = start_iter\n",
         "\n",
         "        self._level = 1\n",
         "        self._envs = {'1': self._env_factory(n_scrambles=self._level) }\n",
@@ -1434,10 +1454,10 @@
       ],
       "metadata": {
         "id": "G1219JcHFsQi",
-        "outputId": "fb470039-bb69-438f-ec76-5f00a6b7d3f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fb470039-bb69-438f-ec76-5f00a6b7d3f3"
       },
       "execution_count": 29,
       "outputs": [
@@ -1473,13 +1493,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "KI00gTsbCG6k",
-        "outputId": "2879947a-5855-4691-da7e-fb9c539fbea7",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 939
+        },
+        "outputId": "2879947a-5855-4691-da7e-fb9c539fbea7"
       },
       "outputs": [
         {
@@ -1491,7 +1512,45 @@
             "[STEP] 5\n",
             "[REWARD] 0.00\n",
             "[RETURN] [0. 0. 0. 0. 0.]\n",
-            "[STEP] 1\n"
+            "[STEP] 1\n",
+            "[REWARD] 0.27\n",
+            "[RETURN] [0.24117647 0.         0.         0.         0.        ]\n",
+            "[STEP] 1\n",
+            "[REWARD] 0.73\n",
+            "[RETURN] [0.6810364 0.        0.        0.        0.       ]\n",
+            "[STEP] 5\n",
+            "[REWARD] 0.13\n",
+            "[RETURN] [0.6810364  0.         0.         0.         0.11520001]\n",
+            "[STEP] 1\n",
+            "[REWARD] 0.00\n",
+            "[RETURN] [0.06897949 0.         0.         0.         0.11520001]\n",
+            "[STEP] 5\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.06897949 0.         0.         0.         0.01784904]\n",
+            "[STEP] 1\n",
+            "[REWARD] 0.00\n",
+            "[RETURN] [0.00774644 0.         0.         0.         0.01784904]\n",
+            "[STEP] 5\n",
+            "[REWARD] 0.02\n",
+            "[RETURN] [0.00774644 0.         0.         0.         0.02148537]\n",
+            "[STEP] 5\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00774644 0.         0.         0.         0.01530939]\n",
+            "[STEP] 5\n",
+            "Iteration 100...\n",
+            "Iteration mean reward: 0.14\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-32-285f1e678f6b>\u001b[0m in \u001b[0;36m<cell line: 38>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m )\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m \u001b[0mppo_trainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrng_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;31m# rewards, losses = ppo_trainer.get_record()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-27-52e46b1da8b4>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, rng_key)\u001b[0m\n\u001b[1;32m    271\u001b[0m               \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Iteration {iter+1}...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    272\u001b[0m               \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Iteration mean reward: {iter_mean_reward:.2f}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 273\u001b[0;31m               \u001b[0msave_checkpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"acl_decay_{iter+1 + self._start_iter}_checkpoint\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_agent_state\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    274\u001b[0m               \u001b[0msave_record\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"acl_decay_{iter+1 + self._start_iter}\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlistify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_rewards\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'record'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlistify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_losses\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'record'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    275\u001b[0m             \u001b[0mtransitions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuffer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miteration_seed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'PPOTrainer' object has no attribute '_start_iter'"
           ]
         }
       ],
